--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="1;url=https://ninux-day-2016.github.io/">
+        <meta http-equiv="refresh" content="1;url=https://robertoreale.me/ninux-day-2016">
         <script type="text/javascript">
-            window.location.href = "https://ninux-day-2016.github.io/"
+            window.location.href = "https://robertoreale.me/ninux-day-2016"
         </script>
 	<title>Fog and the City: an urbanist's perspective</title>
     </head>
     <body>
-        <a href='https://ninux-day-2016.github.io/'>https://ninux-day-2016.github.io/</a>
+        <a href='https://robertoreale.me/ninux-day-2016'>https://robertoreale.me/ninux-day-2016</a>
     </body>
 </html>
